[tool.poetry]
name = "Спецкурс Юшкова"
version = "0.1.2"
description = "Набор скриптов для выполнения заданий по спецкурсу В.П. Юшкова 'Турбулентность атмосферы в пограничном слое'"
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
pyarrow = "^4.0.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
